--- a/public/MilleniumTravelAgency/TravelBlog/travelBlog2.css
+++ b/public/MilleniumTravelAgency/TravelBlog/travelBlog2.css
@@ -135,8 +135,8 @@ a.round {
   }
   
   .previous {
-    background-color: rgba(238,231,218,255);
-    color: black;
+    background-color: brown;
+    color: white;
   }
   
   .next {
