--- a/public/MilleniumTravelAgency/Home/home.css
+++ b/public/MilleniumTravelAgency/Home/home.css
@@ -204,6 +204,9 @@ section#konten3 div.arrow{
     opacity: 1;
     right: 0;
   }
+  a.button:hover{
+      color: orange;
+  }
   section#konten3 .arrow_box {
 	position: relative;
 	background:brown;
