--- a/public/MilleniumTravelAgency/TravelBlog/travelBlog.css
+++ b/public/MilleniumTravelAgency/TravelBlog/travelBlog.css
@@ -40,7 +40,7 @@ div#main{
     background-color: rgba(238,231,218,255);
     padding-left: 3%;
     padding-right: 3%;
-    padding-bottom: 5%
+    padding-bottom: 5%;
     letter-spacing: 3px;
     justify-content: space-around;
 }
