--- a/public/MilleniumTravelAgency/SignUp/daftar.css
+++ b/public/MilleniumTravelAgency/SignUp/daftar.css
@@ -58,7 +58,7 @@ section#bottom div.contact img{
 }
 .konten{
     width: 100%;
-    height: 570px;
+    height: auto;
     margin-top: 1px;
 }
 form{
@@ -70,7 +70,7 @@ form{
     margin-left: 35%;
     width: 400px;
     background-color: rgba(238,231,218,255);;
-    height: 450px;
+    height: auto;
 }
 form p{
     margin-bottom: 0px;
