--- a/public/MilleniumTravelAgency/TravelBlog/travelBlog.css
+++ b/public/MilleniumTravelAgency/TravelBlog/travelBlog.css
@@ -34,7 +34,7 @@ section#navigasi a:hover{
 div#main{
     display: flex;
     width: 100%;
-    height: 700px;
+    height: auto;
 }
 .menu{
     background-color: rgba(238,231,218,255);
@@ -84,7 +84,7 @@ div#main{
     text-align: left;
     padding-right: 15px;
     padding-left: 15px;
-    height: 150px;
+    height: auto;
 }
 .right-item h3{
     color: brown;
@@ -92,7 +92,7 @@ div#main{
 }
 .left-item{
     width: 300px;
-    height: 210px;
+    height: auto;
     padding: 5px;
 }
 .left-item img{
